<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/resultTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/score_title"
        android:textColor="@android:color/darker_gray"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/feedbackTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />

    <Button
        android:id="@+id/reviewButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:text="@string/review_button"
        android:textSize="16sp" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/restart_button"
        android:textSize="16sp" />
</LinearLayout>
